# cource_work

./: CMakeLists.txt  README.md  Scholar_UML_Diagram.puml
include/: exceptions.h  historyGradeGenerator.h  mainWindow.h  scholarshipCalculator.h  student.h  studentDatabase.h  studentDialogBuilder.h  studentHistoryDialog.h  studentTableManager.h
include/entities/: scholarship.h  student.h
include/exceptions/: exceptions.h
include/managers/: studentDatabase.h  studentTableManager.h
include/services/: historyGradeGenerator.h  scholarshipCalculator.h  studentStatisticsUpdater.h
include/ui/: mainWindow.h  studentDialogBuilder.h  studentHistoryDialog.h
src/: historyGradeGenerator.cpp  main.cpp  mainWindow.cpp  scholarship.cpp  scholarshipcalculator.cpp  student.cpp  studentDatabase.cpp  studentDialogBuilder.cpp  studentHistoryDialog.cpp  studentStatisticsUpdater.cpp  studentTableManager.cpp
src/entities/: scholarship.cpp  student.cpp
src/managers/: studentDatabase.cpp  studentTableManager.cpp
src/services/: historyGradeGenerator.cpp  scholarshipCalculator.cpp  studentStatisticsUpdater.cpp
src/ui/: mainWindow.cpp  studentDialogBuilder.cpp  studentHistoryDialog.cpp
